Complete full-stack CN Lab platform with AI assistance and compiler integration

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,9 @@
 .env.local
 .env.production
 
+# Sensitive documentation
+REACT_CONVERSION_COMPLETE.md
+
 # Node modules
 node_modules/
 npm-debug.log*
