--- a/frontend-react/.env.example
+++ b/frontend-react/.env.example
@@ -1,2 +1,3 @@
 # Google Gemini API Configuration
-VITE_GEMINI_API_KEY=your_gemini_api_key_here
+# Get your API key from: https://makersuite.google.com/app/apikey
+REACT_APP_GEMINI_API_KEY=your_gemini_api_key_here
